<resources>
    <string name="app_name">Optika App</string>
    <string name="addCustomerBtn"> Dodaj Pregled </string>
    <string name="search_button"> Pretraga </string>
    <string name="od_sph"> O.D. sph: </string>
    <string name="od_cyl"> O.D. cyl: </string>
    <string name="angle"> ax </string>
    <string name="os_sph"> O.S. sph: </string>
    <string name="os_cyl"> O.S. cyl: </string>
    <string name="name_text"> Ime: </string>
    <string name="lastname_text"> Prezime: </string>
    <string name="contact_text"> Kontakt(i): </string>
    <string name="naocare_za_stalno"> Naočare za stalno </string>
    <string name="naocare_za_rad"> Naočare za rad </string>
    <string name="addition_text"> Add: </string>
    <string name="phone_num"> Broj Telefona: </string>
    <string name="od"> O.D. </string>
    <string name="os"> O.S. </string>
    <string name="od_angle"> O.D. ax </string>
    <string name="os_angle"> O.S. ax </string>
    <string name="pd"> PD </string>
    <string name="pd_text"> PD: </string>
    <string name="lens_type"> Vrsta stakla: </string>
    <string name="frame"> Okvir: </string>
    <string name="frame_placeholder"> Okvir </string>
    <string name="comment"> Komentar: </string>
    <string name="addtition"> Add </string>
    <string name="save_order"> Sačuvaj </string>
    <string name="date"> Datum: </string>
    <string name="base_value"> 0.00 </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
