<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ToggleButton
        android:id="@+id/order_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textOff="@string/naocare_za_rad"
        android:textOn="@string/naocare_za_stalno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/od_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/od"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_type" />

    <TextView
        android:id="@+id/od_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/od_sph"
        app:layout_constraintBaseline_toBaselineOf="@+id/od_sph_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/od_header" />

    <ToggleButton
        android:id="@+id/od_sph_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="ToggleButton"
        android:textOff="-"
        android:textOn="+"
        app:layout_constraintStart_toEndOf="@+id/od_text"
        app:layout_constraintTop_toBottomOf="@+id/od_header" />

    <EditText
        android:id="@+id/od_sph_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/od_sph"
        app:layout_constraintBaseline_toBaselineOf="@id/od_sph_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/od_sph_toggle"
        app:layout_constraintTop_toTopOf="@id/od_header" />

    <TextView
        android:id="@+id/od_cyl_order_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/od_cyl"
        app:layout_constraintBaseline_toBaselineOf="@id/od_cyl_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/od_sph_toggle" />

    <ToggleButton
        android:id="@+id/od_cyl_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="ToggleButton"
        android:textOff="-"
        android:textOn="+"
        app:layout_constraintStart_toEndOf="@+id/od_cyl_order_text"
        app:layout_constraintTop_toBottomOf="@+id/od_sph_toggle" />

    <EditText
        android:id="@+id/od_cyl_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/od_cyl"
        app:layout_constraintBaseline_toBaselineOf="@+id/od_cyl_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/od_cyl_toggle"
        app:layout_constraintTop_toBottomOf="@+id/od_sph_toggle" />

    <TextView
        android:id="@+id/od_angle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/angle"
        app:layout_constraintTop_toBottomOf="@+id/od_cyl_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/od_angle_value"/>

    <EditText
        android:id="@+id/od_angle_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:hint="@string/od_angle"
        app:layout_constraintTop_toBottomOf="@+id/od_cyl_toggle"
        app:layout_constraintStart_toEndOf="@id/od_angle"/>

    <TextView
        android:id="@+id/os_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/os"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/od_angle" />

    <TextView
        android:id="@+id/os_sph_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/os_sph"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/os_header"
        app:layout_constraintBaseline_toBaselineOf="@id/os_sph_toggle"/>

    <ToggleButton
        android:id="@+id/os_sph_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="ToggleButton"
        android:textOff="-"
        android:textOn="+"
        app:layout_constraintStart_toEndOf="@+id/os_sph_text"
        app:layout_constraintTop_toBottomOf="@+id/os_header" />

    <EditText
        android:id="@+id/os_sph_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/os_sph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/os_sph_toggle"
        app:layout_constraintTop_toBottomOf="@+id/os_header"
        app:layout_constraintBaseline_toBaselineOf="@id/os_sph_toggle"/>

    <TextView
        android:id="@+id/os_cyl_order_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/os_cyl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/os_sph_toggle"
        app:layout_constraintBaseline_toBaselineOf="@id/os_cyl_toggle"/>

    <ToggleButton
        android:id="@+id/os_cyl_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="ToggleButton"
        android:textOff="-"
        android:textOn="+"
        app:layout_constraintStart_toEndOf="@+id/os_cyl_order_text"
        app:layout_constraintTop_toBottomOf="@+id/os_sph_toggle" />

    <EditText
        android:id="@+id/os_cyl_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/od_cyl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/os_cyl_toggle"
        app:layout_constraintTop_toBottomOf="@+id/os_sph_toggle"
        app:layout_constraintBaseline_toBaselineOf="@+id/os_cyl_toggle"/>

    <TextView
        android:id="@+id/os_angle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/angle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/os_cyl_toggle"
        app:layout_constraintBaseline_toBaselineOf="@+id/os_angle_value"/>

    <EditText
        android:id="@+id/os_angle_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/os_angle"
        app:layout_constraintStart_toEndOf="@id/os_angle"
        app:layout_constraintTop_toBottomOf="@+id/os_cyl_toggle"/>

    <TextView
        android:id="@+id/addition_text_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/addtition"
        app:layout_constraintTop_toBottomOf="@+id/os_angle_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/addition_value"/>

    <EditText
        android:id="@+id/addition_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:hint="@string/addtition"
        app:layout_constraintStart_toEndOf="@id/addition_text_order"
        app:layout_constraintTop_toBottomOf="@id/os_angle_value"/>

    <TextView
        android:id="@+id/pd_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pd_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addition_value"
        app:layout_constraintBaseline_toBaselineOf="@+id/pd_value"/>

    <EditText
        android:id="@+id/pd_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/pd"
        app:layout_constraintStart_toEndOf="@+id/pd_text"
        app:layout_constraintTop_toBottomOf="@+id/addition_value" />

    <TextView
        android:id="@+id/lens_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lens_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pd_value"
        app:layout_constraintBaseline_toBaselineOf="@+id/lens_type_value"/>

    <EditText
        android:id="@+id/lens_type_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lens_type"
        app:layout_constraintStart_toEndOf="@+id/lens_type_text"
        app:layout_constraintTop_toBottomOf="@+id/pd_value" />

    <TextView
        android:id="@+id/frame_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lens_type_value"
        app:layout_constraintBaseline_toBaselineOf="@+id/frame_value"/>

    <EditText
        android:id="@+id/frame_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/frame_placeholder"
        app:layout_constraintStart_toEndOf="@+id/frame_text"
        app:layout_constraintTop_toBottomOf="@+id/lens_type_value" />

    <TextView
        android:id="@+id/comment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_value"
        app:layout_constraintBaseline_toBaselineOf="@+id/comment_value"/>

    <EditText
        android:id="@+id/comment_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/comment"
        app:layout_constraintStart_toEndOf="@+id/comment_text"
        app:layout_constraintTop_toBottomOf="@+id/frame_value" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/date"
        app:layout_constraintTop_toBottomOf="@+id/comment_value"
        app:layout_constraintStart_toStartOf="parent"
        />

    <DatePicker
        android:id="@+id/date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/date_text"
        app:layout_constraintStart_toStartOf="parent"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>