<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewBuyerOrder"
    android:id="@+id/new_buyer_order_root"
    android:orientation="vertical">

    <ToggleButton
        android:id="@+id/type_of_glasses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textOff="@string/naocare_za_rad"
        android:textOn="@string/naocare_za_stalno"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#fff"
        android:textColor="#121d80"/>

    <TextView
        android:id="@+id/od_text_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/od"
        app:layout_constraintTop_toBottomOf="@+id/type_of_glasses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/od_sph_placeholder_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/od_text_new"
        app:layout_constraintBottom_toTopOf="@+id/od_cyl_placeholder_new"
        />

    <View
        android:id="@+id/od_cyl_placeholder_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/od_sph_placeholder_new"
        app:layout_constraintBottom_toTopOf="@+id/os_text_new"/>

    <TextView
        android:id="@+id/os_text_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/os"
        app:layout_constraintTop_toBottomOf="@+id/od_cyl_placeholder_new"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>