<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pd_text_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/pd_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/pd_value_new"/>

        <EditText
            android:id="@+id/pd_value_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toEndOf="@+id/pd_text_new"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lens_type_text_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/lens_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pd_value_new"
            app:layout_constraintBaseline_toBaselineOf="@id/lens_type_value_new"/>

        <EditText
            android:id="@+id/lens_type_value_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/lens_type_text_new"
            app:layout_constraintTop_toBottomOf="@+id/pd_value_new" />

        <TextView
            android:id="@+id/frame_text_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/frame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lens_type_value_new"
            app:layout_constraintBaseline_toBaselineOf="@id/frame_value_new"/>

        <EditText
            android:id="@+id/frame_value_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/frame_text_new"
            app:layout_constraintTop_toBottomOf="@+id/lens_type_value_new" />

        <TextView
            android:id="@+id/comment_text_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/comment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_value_new"
            app:layout_constraintBaseline_toBaselineOf="@id/comment_value_new"/>

        <EditText
            android:id="@+id/comment_value_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/comment_text_new"
            app:layout_constraintTop_toBottomOf="@+id/frame_value_new" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/date"
            app:layout_constraintTop_toBottomOf="@+id/comment_value_new"
            app:layout_constraintStart_toStartOf="parent"
            />

        <DatePicker
            android:id="@+id/date_value_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/date_text"
            app:layout_constraintStart_toStartOf="parent"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
