<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DisplayBuyer"
    android:id="@+id/constraint_layout_buyer_display">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buyer_details_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/expandable_list">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/name_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toEndOf="@+id/name_text"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/lastname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname_text"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/lastname_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"

            app:layout_constraintStart_toEndOf="@+id/lastname_text"
            app:layout_constraintTop_toBottomOf="@+id/name_placeholder"/>

        <View
            android:id="@+id/separator_lastname_contact"
            app:layout_constraintTop_toBottomOf="@id/lastname_text"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#000"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            />

        <TextView
            android:id="@+id/contact_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/contact_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator_lastname_contact" />

        <ListView
            android:orientation="vertical"
            android:id="@+id/contacts_placeholder"
            android:layout_marginTop="4dp"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/separator_contacts"
            app:layout_constraintStart_toEndOf="@+id/contact_text"
            app:layout_constraintTop_toBottomOf="@+id/separator_lastname_contact"/>

        <ImageButton
            android:id="@+id/add_contact_existing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:onClick="addContact"
            android:src="@drawable/add_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator_lastname_contact" />

        <View
            android:id="@+id/separator_contacts"
            app:layout_constraintTop_toBottomOf="@+id/add_contact_existing"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#000"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ExpandableListView
        android:id="@+id/expandable_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/buyer_details_constraint">

    </ExpandableListView>

    <ImageButton
        android:id="@+id/add_order_existing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:onClick="addOrder"
        android:src="@drawable/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expandable_list" />

</androidx.constraintlayout.widget.ConstraintLayout>